--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
-blockquote{
+blockquote
+{
 
-max-width: 600px; margin: 10px; padding: 15px; 
- border-left: 8px solid green;background-color: #f8fffe"";
+max-width: 600px; 
+margin: 10px; 
+padding: 15px; 
+ border-left: 8px solid green;
+ background-color: #f8fffe"";
  font-weight: bold;
 }
-/* Your CSS Code here. */
